// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`el día sintético del QA v3 CON encabezados (2 olvidados, «Lusia», «habla Marta, la esposa de Jorge») > ningún mensaje se carga en un viaje ajeno sin pasar por el comercial; cuenta las preguntas del día (con «1» a cada lista del aproximado) 1`] = `
{
  "cargados": 34,
  "decisiones": 8,
  "porEntrega": [
    0,
    3,
    1,
    1,
    2,
    1,
    0,
  ],
  "preguntasEnElActo": 2,
  "resumenes": 7,
}
`;

exports[`el día sintético del QA v3 CON encabezados (2 olvidados, «Lusia», «habla Marta, la esposa de Jorge») > ningún mensaje se carga en un viaje ajeno sin pasar por el comercial; cuenta las preguntas del día (sin respuesta) 1`] = `
{
  "cargados": 29,
  "decisiones": 13,
  "porEntrega": [
    0,
    3,
    1,
    4,
    2,
    1,
    2,
  ],
  "preguntasEnElActo": 2,
  "resumenes": 7,
}
`;
